# text-transform-service

./: .gitignore  CLAUDE.md  CYCLE-LOG.md  HANDOFF.md  Makefile  NOTES-FOR-NEXT-CYCLES.md  README.md  goClaude.sh  pyproject.toml  system-overview.md  text-transform-service-BUILD-PLAN.md  text-transform-service-DESIGN.md
.claude/: settings.json
deploy/: README.md  redeploy.sh  text-transform-service.service
deploy/ollama.service.d/: flash-attn.conf
docs/: ai-reference.md  for-developers.md  models.md
docs/adr/: 0000-template.md  0001-initial.md  0001-stack.md  0002-runtime-ollama.md  0003-auth.md  0004-style-wrapping-caller-side.md  0005-concurrency.md  0006-cycle-execution-model.md  0007-safety-classification-exception.md  0008-concurrency-burst-reliability.md
docs/requests/: brickfeed-2026-07-RESPONSE.md  brickfeed-2026-07.md
src/tts/: __init__.py  app.py  budget.py  concurrency.py  config.py  health.py  llm.py  logging_setup.py  pipeline.py  registry.py  startup.py  validators.py
src/tts/transforms/: __init__.py  cast_canonicalize.py  cast_mentions.py  echo.py  illustration_prompt.py  image_prompt.py  (+4 more)
tests/: conftest.py  test_auth.py  test_budget.py  test_cast_canonicalize.py  test_cast_mentions.py  test_config.py  test_gpu.py  test_health.py  test_illustration_prompt.py  test_image_prompt.py  test_logging.py  test_ollama_client.py  test_opinion_gate.py  test_opinion_image_brief.py  test_pipeline.py  test_registry.py  test_route.py  test_scene_update.py  test_startup_check.py  test_story_cover.py  test_transforms_listing.py  test_validators.py
(+33 files in other folders)
